--- a/L.html
+++ b/L.html
@@ -18,7 +18,7 @@
 
 
 
-					<div class="image main"><img src="images/myCv.pdf" alt="" /></div>
+					<div class="image main"><img src="images/cv.pdf" alt="" /></div>
 					<p>
 
 
